[package]
name = "mini-projects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mini-web-server"
path = "src/bin/web_server.rs"

# [[bin]]
# name = "mini-redis-server"
# path = "src/bin/server.rs"

[dependencies]
chrono = "0.4"
