[package]
name = "mini-projects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mini-web-server"
path = "src/bin/web_server.rs"

[[bin]]
name = "mini-web-server-2"
path = "src/bin/web_server_2.rs"

[[bin]]
name = "mini-async-web-server"
path = "src/bin/async_web_server.rs"

[[bin]]
name = "mini-timer-future"
path = "src/bin/timer_future.rs"

[[bin]]
name = "myredis-server"
path = "src/bin/myredis_server.rs"

[[bin]]
name = "myredis-client"
path = "src/bin/myredis_client.rs"

[dependencies]
chrono = "0.4"
crossbeam = "0.8.1"
rayon = "1.7"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
tracing = "0.1"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
